--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             <div class="button" id="7">7</div>
             <div class="button" id="8">8</div>
             <div class="button" id="9">9</div>
-            <div class="button +" id="plus">+</div>
+            <div class="button + operator" id="plus">+</div>
             <div class="button" id="4">4</div>
             <div class="button" id="5">5</div>
             <div class="button" id="6">6</div>
-            <div class="button -" id="minus">-</div>
+            <div class="button - operator" id="minus">-</div>
             <div class="button" id="1">1</div>
             <div class="button" id="2">2</div>
             <div class="button" id="3">3</div>
-            <div class="button *" id="times">*</div>
+            <div class="button * operator" id="times">*</div>
             <div class="button" id="0">0</div>
             <div class="button" id="point">.</div>
             <div class="button =" id="equal">=</div>
-            <div class="button /" id="divide">/</div>
+            <div class="button / operator" id="divide">/</div>
         </div>
     </div>
     <script src="calculator.js"></script>
